tests/NormalTests/paczka1/fuzzy1/61188522.err
Error in line 6: 8qWW0EsP A574 42,2
Error in line 9: 8qWW0EsP S695 3,4
Error in line 23: WrZjkw A690 40,8
Error in line 21: MThTF A690 97,9
Error in line 26: 7O7z2j A240 343,2
Error in line 37: 8qWW0EsP S695 93,5
Error in line 27: A690 A240 57,0
